; ModuleID = '/home/carl/AnghaBench/libgit2/tests/apply/extr_both.c_test_apply_both__cant_modify_source_path_after_rename.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/apply/extr_both.c_test_apply_both__cant_modify_source_path_after_rename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DIFF_RENAME_AND_MODIFY_SOURCE_PATH = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@GIT_APPLY_LOCATION_BOTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_apply_both__cant_modify_source_path_after_rename() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @DIFF_RENAME_AND_MODIFY_SOURCE_PATH, align 4
  %3 = load i32, i32* @DIFF_RENAME_AND_MODIFY_SOURCE_PATH, align 4
  %4 = call i32 @strlen(i32 %3)
  %5 = call i32 @git_diff_from_buffer(i32** %1, i32 %2, i32 %4)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32, i32* @repo, align 4
  %8 = load i32*, i32** %1, align 8
  %9 = load i32, i32* @GIT_APPLY_LOCATION_BOTH, align 4
  %10 = call i32 @git_apply(i32 %7, i32* %8, i32 %9, i32* null)
  %11 = call i32 @cl_git_fail(i32 %10)
  %12 = load i32*, i32** %1, align 8
  %13 = call i32 @git_diff_free(i32* %12)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_diff_from_buffer(i32**, i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_apply(i32, i32*, i32, i32*) #1

declare dso_local i32 @git_diff_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
